--- a/.github/workflows/versioning.yml
+++ b/.github/workflows/versioning.yml
@@ -20,7 +20,7 @@ jobs:
       id: versioning
       uses: PaulHatch/semantic-version@v4.0.2
       with:
-        tag_prefix: 'v'
+        tag_prefix: "v"
         major_pattern: "break:"
         minor_pattern: "feat:"
         patch_pattern: "fix:"
