--- a/.github/workflows/versioning.yml
+++ b/.github/workflows/versioning.yml
@@ -2,7 +2,7 @@ name: Versioning Automation with SemVer
 
 on:
   push:
-    branches: 
+    branches:   
       - master
 
 jobs:
@@ -20,11 +20,11 @@ jobs:
       id: versioning
       uses: PaulHatch/semantic-version@v4.0.2
       with:
-        tag_prefix: "v"
+        tag_prefix: ''
         major_pattern: "break:"
         minor_pattern: "feat:"
         patch_pattern: "fix:"
-        format: "${major}.${minor}.${patch}"
+        format: "v${major}.${minor}.${patch}"
    
     - name: Create Release
       uses: "marvinpinto/action-automatic-releases@latest"
