--- a/.github/workflows/versioning.yml
+++ b/.github/workflows/versioning.yml
@@ -2,34 +2,10 @@ name: Versioning Automation with SemVer
 
 on:
   push:
-    branches:   
+    branches: 
       - master
 
 jobs:
-  Workflow-versioning:
-    runs-on: ubuntu-latest
-
-    steps: 
-    - name: Checkout
-      uses: actions/checkout@v3
-      with:
-        # Fetch all commits
-        fetch-depth: 0
-   
-    - name: Semantic versioning
-      id: versioning
-      uses: PaulHatch/semantic-version@v4.0.2
-      with:
-        tag_prefix: ''
-        major_pattern: "break:"
-        minor_pattern: "feat:"
-        patch_pattern: "fix:"
-        format: "v${major}.${minor}.${patch}"
-   
-    - name: Create Release
-      uses: "marvinpinto/action-automatic-releases@latest"
-      with:
-        repo_token: ${{ secrets.GITHUB_TOKEN }}
-        title: ${{ steps.versioning.outputs.version }}
-        automatic_release_tag: ${{ steps.versioning.outputs.version }}
-        prerelease: false
+  Workflow-calling:
+    uses: tiagomartimiano/github-automated-semver-workflow/.github/workflows/versioning.yml@v1.0.0
+    secrets: inherit
